--- a/recette.html
+++ b/recette.html
@@ -3,6 +3,7 @@
     <head>
         <title>Gateau au chocolat</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link rel="stylesheet" href="recette.css"/>
     </head>
     <body>
@@ -37,7 +38,7 @@
                     </tr>
                 </table>
             </div>
-            
+
             <div>
                 <div class="colonne1 colonne">
                     <h2>Ingrédients</h2>
